# octonion

./: .gitignore  Cargo.toml  LICENSE-APATCH  LICENSE-MIT  README.md  TODO  justfile  sample.py
.github/workflows/: cargo-test.yaml
benches/: add.rs  decrypt.rs  encrypt.rs  find_g_h.rs  mul.rs
examples/: bigint.rs  cyclic_octonion.rs  debug.rs  find_g_h.rs  octonion.rs  power.rs
src/: consts.rs  crypto.rs  lib.rs  types.rs  utils.rs
src/crypto/: cipher_text.rs  tests.rs
src/types/: tests.rs
