[package]
name = "octonion"
version = "0.1.0"
authors = ["hamadakafu <kafu.h1998@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib"]

[dependencies]
typenum = "*"
num-bigint = {version = "0.3", features = ["rand"] }
once_cell = "*"
quickcheck = "1"
rand = "0.7"
anyhow = "*"

[dev-dependencies]
quickcheck_macros = "1"
