[package]
name = "octonion"
version = "0.1.0"
authors = ["hamadakafu <kafu.h1998@gmail.com>"]
edition = "2018"
license = "MIT OR Apatch-2.0"
repository = "https://github.com/hamadakafu/octonion"
readme = "README.md"

[lib]
crate-type = ["lib"]

[dependencies]
num-bigint = {version = "0.3", features = ["rand"] }
once_cell = "*"
rand = "0.7"
anyhow = "*"

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
criterion = "0.3"

[[bench]]
name = "find_g_h"
harness = false

[[bench]]
name = "encrypt"
harness = false

[[bench]]
name = "decrypt"
harness = false

[[bench]]
name = "add"
harness = false

[[bench]]
name = "mul"
harness = false

